[tool.poetry]
name = "normal-oj-web"
version = "0.1.0"
description = "Backend of Normal-OJ"
authors = []
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.2.2"
gunicorn = "^20.1.0"
mongoengine = "^0.24.2"
blinker = "^1.5"
PyJWT = "^2.5.0"
requests = "^2.28.1"
mosspy = "^1.0.9"
redis = "^4.3.4"
pytest-cov = "^3.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
mongomock = "^4.1.2"
pre-commit = "^2.20.0"
yapf = "^0.32.0"
fakeredis = "^1.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
