[tool.poetry]
name = "normal-oj-web"
version = "0.1.0"
description = "Backend of Normal-OJ"
authors = []
readme = "README.md"
packages = []
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
Flask = "^3.0.3"
gunicorn = "^23.0.0"
mongoengine = "^0.29.1"
blinker = "^1.5"
PyJWT = "^2.5"
requests = "^2.31"
mosspy = "^1.0"
redis = "^4.4"
# <4.9.0 to fix mongomock GridFS integration
# see: https://github.com/mongomock/mongomock/issues/903
pymongo = "^4.5.0,<4.9.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1"
mongomock = "^4.2.0.post1"
pre-commit = "^2.20"
yapf = "^0.32"
fakeredis = "^1.9"
toml = "^0.10"
pytest-cov = "^3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
